--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,8 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["."]
 
-[tool.uv]
-dev-dependencies = [
+[tool.uv.dependency-groups]
+dev = [
     "ruff >= 0.6.8",
     "ipython",
     "jupyter",
