Add visualization utility for creating videos/GIFs from intermediate images
- Add create_visualization.py script to generate videos/GIFs from decoded intermediates
- Add text overlays showing step ID, block type, and block ID
- Add progress bars and file size reporting
- Auto-scale font size relative to image dimensions
- Add imageio dependencies for video/GIF creation
- Update README with visualization documentation
- Refactor code for better organization and maintainability

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "invisible-watermark",
     "accelerate",
     "pillow",
+    "imageio",
+    "imageio-ffmpeg",
 ]
 
 [project.optional-dependencies]
